@@ -35,17 +35,16 @@ public class CompilerWorkspaceConfiguration implements PersistentStateComponent<
   private static final Logger LOG = Logger.getInstance("#com.intellij.compiler.CompilerWorkspaceConfiguration");
   
   public static final int DEFAULT_COMPILE_PROCESS_HEAP_SIZE = 700;
-  public static final String DEFAULT_COMPILE_PROCESS_VM_OPTIONS = "-ea -XX:+UseConcMarkSweepGC";
-  private static final int CORES_COUNT = Runtime.getRuntime().availableProcessors();
+  public static final String DEFAULT_COMPILE_PROCESS_VM_OPTIONS = "-ea";
   static {
-    LOG.info("Available processors: " + CORES_COUNT);
+    LOG.info("Available processors: " + Runtime.getRuntime().availableProcessors());
   }
 
   public boolean AUTO_SHOW_ERRORS_IN_EDITOR = true;
   @Deprecated public boolean CLOSE_MESSAGE_VIEW_IF_SUCCESS = true;
   public boolean CLEAR_OUTPUT_DIRECTORY = true;
   public boolean USE_COMPILE_SERVER = true;
-  public boolean MAKE_PROJECT_ON_SAVE = CORES_COUNT > 2;
+  public boolean MAKE_PROJECT_ON_SAVE = false; // until we fix problems with several open projects (IDEA-104064), daemon slowness (IDEA-104666)
   public boolean PARALLEL_COMPILATION = false;
   public int COMPILER_PROCESS_HEAP_SIZE = DEFAULT_COMPILE_PROCESS_HEAP_SIZE;
   public String COMPILER_PROCESS_ADDITIONAL_VM_OPTIONS = DEFAULT_COMPILE_PROCESS_VM_OPTIONS;
